java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable8-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateLocalVariable8
Create Parameter foo
Create Local Variable foo
